<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Game Vault</string>
    <string name="txtFavorites">Favorites</string>
    <string name="txtVaultEnter">Enter in the Vault</string>
    <string name="welcomeBanner">Welcome back Boss!</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="btnVaultDesc">Vault button</string>
    <string name="poster1Desc">Favourite poster number 1</string>
    <string name="poster2Desc">Favourite poster number 2</string>
    <string name="poster3Desc">Favorite poster number 3</string>
    <string name="favorite_poster_number_4">Favorite poster number 4</string>
    <string name="BtnPSDesc">Playstation link</string>
    <string name="BtnSteamDesc">Steam link</string>
    <string name="BtnXboxDesc">Xbox link</string>
    <string name="BtnSetting">Go to settings</string>
    <string name="title_activity_vault">activity_vault</string>
    <string name="vaultBanner">Your games</string>
    <string name="gamePosterDesc">Game poster</string>
    <string name="placeholderName">Placeholder name</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend orci sed tempor ultricies. Morbi ut feugiat mauris, at lobortis massa. Mauris consequat, tortor nec congue ornare, velit sem rutrum nibh, non luctus lorem tellus eu sem. Nunc metus nisi, rutrum eu orci sed, ullamcorper ultrices odio. Vestibulum vulputate magna sit amet dui tristique egestas. Fusce sit amet convallis lorem, a mollis augue. Praesent malesuada efficitur quam ac elementum. Cras auctor nisi ut mollis volutpat. Quisque eleifend a nisi eget viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque nec semper nibh. Donec pellentesque nunc turpis, nec blandit mi ultricies sit amet.</string>
    <string name="placeholderStartDate">Start: 00/00/00</string>
    <string name="placeholderEndDate">End: 00/00/00</string>
    <string name="noGames">So empty…</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="select">Select</string>
    <string name="PsnEditTextPlaceHolder">Insert PSN link</string>
    <string name="SteamEditTextPlaceHolder">Insert Steam link</string>
    <string name="XboxEditTextPlaceHolder">Insert Xbox link</string>
    <string name="txtChangeFavorite">Click the poster to change favorite game</string>
    <string name="searchButtonDesc">searchButton</string>
    <string name="rawgLogoDesc">RAWG logo</string>
    <string name="RawgEditTextPlaceHolder">Insert Rawg API</string>
    <string name="btnRawgTxt">Get your Rawg API</string>
    <string name="searchBarTxt">Search by…</string>
    <string name="searchType1">Game series</string>
    <string name="searchType2">Game name</string>
    <string name="searchType3">Store near by</string>
    <string name="releasePlaceholder">Release: 00/00/0000</string>
    <string name="platformPlaceholder">Platform: placeholder</string>
    <string name="platform">Platform</string>
    <string name="genericDatePlaceholder">00/00/0000</string>
    <string name="releasedOn">Released On</string>
    <string name="about">About</string>
    <string name="metacritic_logo">Metacritic logo</string>
    <string name="value100">100</string>
    <string name="btnAddText">Add to the Vault</string>
    <string name="btn_start_date">Start date</string>
    <string name="btn_end_date">End date</string>
    <string name="placeholder_no_date">No date picked</string>
    <string name="google_maps_key">AIzaSyB0hJeq3JWLSc7i3IvoQMJ3XHgR3VeC1Gg</string>
    <string name="favoritePosterDialog" tools:ignore="ExtraTranslation">Game chosen</string>
    <string name="searchbar_dialog_hint" tools:ignore="ExtraTranslation">Search in Vault games</string>
    <string name="close">Close</string>
    <string name="statsTxt">Stats</string>
    <string name="ratingPlaceholder">0.0</string>
    <string name="total_games">Total games:</string>
    <string name="value00">00</string>
    <string name="ended">Ended:</string>
    <string name="swipeButtonTxt">Open Vault</string>
    <string name="closeButtonDesc">Close button</string>
    <string name="saveButtonDesc">Save button</string>
</resources>