<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        android:weightSum="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBanner"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMid"
            android:layout_marginStart="@dimen/marginLittle"/>

        <com.google.android.material.search.SearchBar
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/search_bar"
            android:text="@string/searchBarText"/>

    </LinearLayout>


    <!-- Profile pic -->
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/pfpMeasures"
        android:layout_height="@dimen/pfpMeasures"
        app:cardCornerRadius="@dimen/pfpCornerRadius"
        android:layout_marginTop="@dimen/marginMid"
        android:id="@+id/cardView"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/imgPfp"
            android:src="@drawable/profile_placeholder"
            android:clickable="true"
            android:contentDescription="@string/profile_pic" />

    </androidx.cardview.widget.CardView>


    <!-- Platform link -->
    <LinearLayout
        android:id="@+id/GamePlatforms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginMid"
        android:gravity="center"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/psLogo"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/playstation"
            android:clickable="true"
            android:contentDescription="@string/BtnPSDesc" />

        <ImageButton
            android:id="@+id/steamLogo"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/steam"
            android:clickable="true"
            android:contentDescription="@string/BtnSteamDesc" />

        <ImageButton
            android:id="@+id/xboxLogo"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/xbox"
            android:clickable="true"
            android:contentDescription="@string/BtnXboxDesc" />
    </LinearLayout>


    <TextView
        android:id="@+id/txtFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GamePlatforms_layout"
        android:layout_marginTop="@dimen/marginMid20"
        android:gravity="center"
        android:text="@string/txtFavorites"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeMid" />

    <!-- Favorites poster -->
    <LinearLayout
        android:id="@+id/favorites_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFavorites"
        android:orientation="horizontal"
        android:padding="@dimen/paddingMid"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/favoritePoster1"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_marginEnd="@dimen/marginMid"
            android:layout_weight="1"
            android:background="@color/blue"
            android:clickable="true"
            android:contentDescription="@string/poster1Desc"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder" />

        <ImageButton
            android:id="@+id/favoritePoster2"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_weight="1"
            android:background="@color/blue"
            android:layout_marginEnd="@dimen/marginMid"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            android:clickable="true"
            android:contentDescription="@string/poster2Desc" />

        <ImageButton
            android:id="@+id/favoritePoster3"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_weight="1"
            android:background="@color/blue"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            android:layout_marginEnd="@dimen/marginMid"
            android:clickable="true"
            android:contentDescription="@string/poster3Desc" />

        <ImageButton
            android:id="@+id/favoritePoster4"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_weight="1"
            android:background="@color/blue"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            android:clickable="true"
            android:contentDescription="@string/favorite_poster_number_4" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorites_layout"
        android:gravity="center"
        android:backgroundTint="@color/background"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeLittle"
        android:text="@string/BtnSetting"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/btnSetting"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtVaultEnter"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMid" />

        <ImageButton
            android:id="@+id/btnVault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vault"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/btnVaultDesc"/>

    </LinearLayout>

</RelativeLayout>
