<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/darkerDetails">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBanner"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMid25"
            android:layout_gravity="center"
            android:fontFamily="@font/sharpgrotesk_semibold20"
            android:layout_marginStart="@dimen/marginMid"
            android:layout_marginEnd="@dimen/textSizeLittle"/>

        <ImageButton
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/marginMid20"
            android:background="@drawable/search"
            android:contentDescription="@string/searchButtonDesc" />

    </LinearLayout>


    <!-- Profile pic and Platform link -->
    <LinearLayout
        android:id="@+id/pfpAndPlatformLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginMid"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/pfpMeasures"
            android:layout_height="@dimen/pfpMeasures"
            app:cardCornerRadius="@dimen/pfpCornerRadius"
            android:layout_margin="@dimen/marginLittle">

            <ImageView
                android:id="@+id/imgPfp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:src="@drawable/profile_placeholder"
                android:contentDescription="@string/profile_pic" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/GamePlatforms_layout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/platformsLayoutHeight"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/marginLittle">

            <ImageButton
                android:id="@+id/psLogo"
                android:layout_width="@dimen/logoMeasuresHome"
                android:layout_height="match_parent"
                android:background="@mipmap/playstation"
                android:clickable="true"
                android:contentDescription="@string/BtnPSDesc" />

            <ImageButton
                android:id="@+id/steamLogo"
                android:layout_width="@dimen/logoMeasuresHome"
                android:layout_height="wrap_content"
                android:background="@mipmap/steam"
                android:clickable="true"
                android:contentDescription="@string/BtnSteamDesc" />

            <ImageButton
                android:id="@+id/xboxLogo"
                android:layout_width="@dimen/logoMeasuresHome"
                android:layout_height="wrap_content"
                android:background="@mipmap/xbox"
                android:clickable="true"
                android:contentDescription="@string/BtnXboxDesc" />
        </LinearLayout>

    </LinearLayout>


    <!--Stats -->
    <LinearLayout
        android:id="@+id/statsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pfpAndPlatformLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginLittle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/statsTxt"
            android:textColor="@color/white"
            android:fontFamily="@font/sharpgrotesk_semibold25"
            android:textSize="@dimen/textSizeMid"/>

        <include layout="@layout/stats_component"/>

    </LinearLayout>


    <!-- Favorites poster -->
    <TextView
        android:id="@+id/txtFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLittle"
        android:gravity="center"
        android:text="@string/txtFavorites"
        android:textColor="@color/white"
        android:fontFamily="@font/sharpgrotesk_semibold25"
        android:textSize="@dimen/textSizeMid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsLayout"/>
    <LinearLayout
        android:id="@+id/favorites_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingMid"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFavorites">

        <ImageButton
            android:id="@+id/favoritePoster1"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_marginEnd="@dimen/marginMid"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/poster1Desc"
            android:background="@color/details"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:id="@+id/favoritePoster2"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/marginMid"
            android:background="@color/details"
            android:scaleType="centerCrop"
            android:contentDescription="@string/poster2Desc" />

        <ImageButton
            android:id="@+id/favoritePoster3"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_weight="1"
            android:background="@color/details"
            android:scaleType="centerCrop"
            android:layout_marginEnd="@dimen/marginMid"
            android:clickable="true"
            android:contentDescription="@string/poster3Desc" />

        <ImageButton
            android:id="@+id/favoritePoster4"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/gamePosterListHeight"
            android:layout_weight="1"
            android:background="@color/details"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:contentDescription="@string/favorite_poster_number_4" />
    </LinearLayout>


    <!-- Settings button -->
    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="@color/background"
        android:textColor="@color/white"
        android:fontFamily="@font/sharpgrotesk_semibold15"
        android:text="@string/BtnSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_layout"/>


    <!-- Vault -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetting"
        android:layout_marginTop="@dimen/marginLittle"
        android:layout_marginBottom="@dimen/marginXL">

        <!-- Documentation: https://github.com/cortinico/slidetoact -->
        <com.ncorti.slidetoact.SlideToActView
            android:id="@+id/btnSwipeVault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginMid"
            app:inner_color="@color/white"
            app:outer_color="@color/darkerDetails"
            app:text="@string/swipeButtonTxt"
            app:text_size="@dimen/textSizeLittle"
            app:text_appearance="@style/SwipeButton"
            app:bounce_on_start="true"
            app:bounce_repeat="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
