<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.GameActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLittle"
            android:layout_marginBottom="@dimen/marginLittle"
            android:fontFamily="@font/sharpgrotesk_semibold25"
            android:gravity="center"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/placeholderName"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMid25" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginMid20"
        android:paddingBottom="@dimen/paddingXL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitle">

        <LinearLayout
            android:id="@+id/gameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/marginMid">

            <!--Poster-->
            <ImageView
                android:id="@+id/gamePoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/marginMid20"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_placeholder"
                android:contentDescription="@string/gamePosterDesc" />


            <!--Platform-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMid"
                android:gravity="center"
                android:text="@string/platform"
                android:textColor="@color/white"
                android:fontFamily="@font/sharpgrotesk_semibold20"
                android:textSize="@dimen/textSizeMid"/>

            <TextView
                android:id="@+id/gamePlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLittle"
                android:gravity="center"
                android:text="@string/platformPlaceholder"
                android:textColor="@color/textColor"
                android:fontFamily="@font/sharpgrotesk_semibold15"
                android:textSize="@dimen/textSizeMid"/>


            <!--Release-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMid20"
                android:gravity="center"
                android:text="@string/releasedOn"
                android:textColor="@color/white"
                android:fontFamily="@font/sharpgrotesk_semibold20"
                android:textSize="@dimen/textSizeMid"/>

            <TextView
                android:id="@+id/gameRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLittle"
                android:gravity="center"
                android:text="@string/genericDatePlaceholder"
                android:textColor="@color/textColor"
                android:fontFamily="@font/sharpgrotesk_semibold15"
                android:textSize="@dimen/textSizeMid"/>


            <!--About-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMid20"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/white"
                android:fontFamily="@font/sharpgrotesk_semibold20"
                android:textSize="@dimen/textSizeMid"/>

            <!--ReadMore Text - Library: https://github.com/colourmoon/readmore-textview-->
            <com.colormoon.readmoretextview.ReadMoreTextView
                android:id="@+id/gameAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLittle"
                android:gravity="center"
                android:text="@string/lorem"
                android:textColor="@color/textColor"
                android:fontFamily="@font/sharpgrotesk_semibold10"
                android:textSize="@dimen/textSizeMid" />



            <!--Metacritic-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/marginMid20"
                android:orientation="horizontal"
                android:background="@drawable/radius_border"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/lightGray">

                <ImageView
                    android:layout_width="@dimen/logoMeasures"
                    android:layout_height="@dimen/logoMeasures"
                    android:src="@drawable/metacritic_logo"
                    android:layout_marginStart="@dimen/marginMid"
                    android:contentDescription="@string/metacritic_logo"/>

                <TextView
                    android:id="@+id/gameRate"
                    android:layout_width="@dimen/logoMeasures"
                    android:layout_height="@dimen/logoMeasures"
                    android:layout_marginStart="@dimen/marginMid"
                    android:layout_marginEnd="@dimen/marginMid"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/radius_border"
                    android:backgroundTint="@color/positiveRating"
                    android:text="@string/value100"
                    android:fontFamily="@font/sharpgrotesk_semibold15"
                    android:textSize="@dimen/textSizeMid"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <!--Add button-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMid20"
                android:layout_marginBottom="@dimen/marginMid20"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/btnAddText"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeMid"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/sharpgrotesk_semibold15"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>