<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".ui.adapter.VaultGamesAdapter">

    <ImageButton
        android:id="@+id/vaultGamePoster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:background="@color/blue"
        android:clickable="true"
        android:contentDescription="@string/gamePosterDesc"
        android:scaleType="centerCrop"
        android:src="@drawable/poster_placeholder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/vaultGamePoster"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtGameName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholderName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>

        <RatingBar
            android:id="@+id/yourRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:clickable="false"
            android:isIndicator="true"
            android:progressTint="@color/starColorFill"
            android:progressBackgroundTint="@color/starColorDefault"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtDateStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/placeholderStartDate"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txtDateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderEndDate"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>