<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".ui.adapter.SearchGamesAdapter"
    android:layout_marginTop="@dimen/marginMid">

    <ImageButton
        android:id="@+id/searchGamePoster"
        android:layout_width="@dimen/gamePosterListWidth"
        android:layout_height="@dimen/gamePosterListHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gameInfo"
        android:background="@color/blue"
        android:clickable="true"
        android:contentDescription="@string/gamePosterDesc"
        android:scaleType="centerCrop"
        android:src="@drawable/poster_placeholder" />

    <LinearLayout
        android:id="@+id/gameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchGamePoster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtGameName"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/listGameTitleWidth"
            android:text="@string/placeholderName"
            android:textColor="@color/white"
            android:fontFamily="@font/sharpgrotesk_semibold15"
            android:scrollHorizontally="true"
            android:textSize="@dimen/TitleTextSize"
            android:layout_margin="@dimen/marginMid"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtGameYear"
            android:layout_width="@dimen/listGameInfoWidth"
            android:layout_height="wrap_content"
            android:text="@string/releasePlaceholder"
            android:textColor="@color/white"
            android:fontFamily="@font/sharpgrotesk_semibold10"
            android:textSize="@dimen/TitleTextSize"
            android:layout_marginTop="@dimen/marginMid"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtGamePlatform"
            android:layout_width="@dimen/listGameInfoWidth"
            android:layout_height="wrap_content"
            android:text="@string/platformPlaceholder"
            android:textColor="@color/white"
            android:fontFamily="@font/sharpgrotesk_semibold10"
            android:textSize="@dimen/TitleTextSize"
            android:layout_marginTop="@dimen/marginMid"
            android:gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>